# powermenu

./: .gitignore  CMakeLists.txt  LICENSE  README.md  install.sh
configs/: interface.xml  style.css
include/: app.hpp
src/: app.cpp  main.cpp
